--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "trailingComma": "all",
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "importOrder": ["^@core/(.*)$", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
+  "importOrderParserPlugins": ["typescript", "decorators-legacy"],
   "importOrderSeparation": false,
   "importOrderSortSpecifiers": true
 }
